--- a/.github/workflows/AccuricsAction.yml
+++ b/.github/workflows/AccuricsAction.yml
@@ -33,7 +33,7 @@ jobs:
           REPO_URL: ${{ github.repositoryUrl }}
         with:
           # Required by Accurics
-          scan-mode: "plan"
+          scan-mode: "scan"
           app-id: ${{ secrets.ACCURICS_APP_ID }}
           env-id: ${{ secrets.ACCURICS_ENV_ID }}
           url: https://cloud.tenable.com/cns
